Changed eligibility form positive return

--- a/content/seek_care/index.html
+++ b/content/seek_care/index.html
@@ -70,7 +70,7 @@ tags:
           <button type="submit" class="btn btn-primary"><div style="font-size:2em;">Submit</div></button>
         </form>
 
-        <div class="alert alert-success" id="elig" style="display:none">You are eligible to receive care. Please <a href="/seek_care/sched_vst">schedule a visit.</a></div>
+        <div class="alert alert-success" id="elig" style="display:none">Based on the information entered, you appear to qualify for care. Click here to <a href="/seek_care/sched_vst">schedule a visit.</a> Remember that this calculator only provides an estimate. You will need to provide all supporting documentation when you come in for your scheduled appointment.</div>
         <div class="alert alert-danger" id="inelig" style="display:none">You are not eligible to receive care. Please call with any questions.</div>
 
       </div>
