--- a/content/seek_care/sched_vst.html
+++ b/content/seek_care/sched_vst.html
@@ -16,7 +16,7 @@ tags:
           You can come by our office at the address above.</br>
         </p>
         <a href="tel://12102202300" class="btn btn-primary active" role="button">(210) 220-2300</a>
-        <a href="mailto:estella@sachristiandental.org?Subject=Schedule%20a%20Visit" class="btn btn-primary active" role="button">Email SACDC</a>
+        <a href="mailto:info@sachristiandental.org?Subject=Schedule%20a%20Visit" class="btn btn-primary active" role="button">Email SACDC</a>
 	    </div>
       <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic16_480.jpg" alt="San Antonio Christian Dental Clinic" class="bs-docs-featurette-img img-responsive">
