Adding vanco server status

--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -10,6 +10,7 @@ tags:
 <script type="text/javascript" src="/static/scripts/errorcodes.json" defer></script>
 <script type="text/javascript" src="/static/scripts/vancoServices.js" defer></script>
 <div class="bs-docs-featurette border1">
+  <span id="alertfield"></span>
   <h3 class="donate bs-docs-featurette-title">
     Help our Mission by Making a Monetary Donation
   </h3>
@@ -228,16 +229,10 @@ tags:
           </div>
           <div class="row">
             <div class="col-xs-3 col-xs-offset-1">
-<<<<<<< HEAD
-              <div class="form-group">
-                <label id="cvvcode_glyph" class="control-label glyphicon">CVV</label>
-                <input class="form-control" type="text" name="cvvcode" value='123'
-=======
               <div class="form-group has-feedback">
                 <!--<label id="cvvcode_glyph" class="control-label glyphicon">CVV</label>-->
                 <label class="control-label" for="cvv">CVV</label>
                 <input class="form-control" type="text" id="cvv" name="cvvcode" value='123'
->>>>>>> 3f9e688eeffffd47e04cae005188c7f2e4d40c69
                 minlength="3" maxlength="4" required>
                 <span id="cvv_glyph" class="glyphicon form-control-feedback"></span>
               </div>
