--- a/content/clinic_info/index.html
+++ b/content/clinic_info/index.html
@@ -14,7 +14,7 @@ tags:
     <div class="row">
       <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic9_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
-          <h3 class="text-center">SACDC Offers Access to Dental Care</h3>
+          <h3 class="text-center">Offering Access to Dental Care</h3>
           <h5 class="text-center">The clinic provides a wide range of dental services for indigent and homeless persons in San Antonio and Bexar County.  SACDC is unique in the area as the only agency providing free dental care through volunteers.</h5>
       </div>
       <div class="col-md-4">
@@ -24,7 +24,7 @@ tags:
       </div>
       <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic1_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
-          <h3 class="text-center">The Geed is Great:</h3>
+          <h3 class="text-center">The Need is Great:</h3>
         <h5 class="text-center">Each year the San Antonio Christian Dental Clinic performs $3.5 million dollars worth of free dental care, over 56,000 annual procedures and 7,000 patient visits. While we mainly see those in and around the Haven for Hope Area, we take anyone from Bexar County who lacks the means to afford quality dental care.</h5>
       </div>
     </div>
@@ -42,7 +42,7 @@ tags:
       </div>
       <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic6_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
-          <h3 class="text-center">UTHSCSA Dental School Collaboration</h3>
+          <h3 class="text-center">UTHSCSA Collaboration</h3>
           <h5 class="text-center">The University of Texas Health Science Center-SA Dental School 4th year dental students provide general dental care and Advanced Education in General Dentistry residents provide specialized treatment under the supervision of dental school faculty during a weekly rotation.</h5>
       </div>
     </div>    
