Removed invalid apostrophe character.

--- a/content/clinic_info/partners.html
+++ b/content/clinic_info/partners.html
@@ -24,7 +24,7 @@ tags:
           <a href="http://www.wellmedmedicalgroup.com/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/WellMed.jpg"></a>
         </p>
         <h3>WellMed</h3>
-        <h5>WellMed’s mission is to change the face of healthcare delivery for seniors. We have been recognized as a leader in preventive care and internal medicine by the healthcare industry, especially in Weslaco and McAllen, TX. Our Coordinated Care delivery system is designed to meet the individual healthcare needs of seniors.</h5>
+        <h5>WellMed's mission is to change the face of healthcare delivery for seniors. We have been recognized as a leader in preventive care and internal medicine by the healthcare industry, especially in Weslaco and McAllen, TX. Our Coordinated Care delivery system is designed to meet the individual healthcare needs of seniors.</h5>
       </div>
 
       <div class="col-md-4">
@@ -41,7 +41,7 @@ tags:
               <p class="text-center partner">
               <a href="http://www.havenforhope.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/Haven_for_Hope.jpg"></a>
               </p>
-              
+
               <h3>Haven for Hope</h3>
               <h5>Haven for Hope's mission is to offer hope and new beginnings by providing, coordinating, and delivering an efficient system of care for people experiencing homelessness in Bexar County.</h5>
       </div>
@@ -52,7 +52,7 @@ tags:
               <h3>I Care San Antonio</h3>
               <h5>Founded in 1992 as a non-profit 501(c)(3), I Care San Antonio (ICSA) is a faith-based, medical organization managed primarily by volunteer doctors who provide dilated eye exams, refractions and glasses, and medical and surgical eye care to those who cannot afford it.</h5>
           </div>
-          
+
       <div class="col-md-4">
               <p class="text-center partner">
               <a href="http://www.alphahome.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/Alpha_Home.jpg"></a>
