Fixed apostrophes causing invalid ASCII. Uploaded properly sized icon.

--- a/content/index.html
+++ b/content/index.html
@@ -36,7 +36,9 @@ tags:
               <h4 class="captionsmall">Dental Care for Those in Need</h4>
           </div>
           <div class="carousel-caption captionattributionleft">
-              <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode" target="_blank">Photo by Laurent Lavì Lazzeresky</a>
+              <a
+                href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode"
+              target="_blank">Photo by Laurent Lavi Lazzeresky</a>
           </div>
       </div>
       <div class="item">
@@ -51,7 +53,9 @@ tags:
               <h4 class="captionsmall">The Need is Great</h4>
           </div>
           <div class="carousel-caption captionattributionright">
-              <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode" target="_blank">Photo by Laurent Lavì Lazzeresky</a>
+              <a
+                href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode"
+              target="_blank">Photo by Laurent Lavi Lazzeresky</a>
           </div>
         </div>
     </div>
