--- a/content/stories/story2.html
+++ b/content/stories/story2.html
@@ -10,7 +10,9 @@ tags:
       <div class="col-md-6">
             <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/storypic2.jpg" alt="A" width="480px">
               <div class="captionattributionleft captionblack">
-                <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode" target="_blank">Photo by Laurent Lavì Lazzeresky</a>
+                <a
+                  href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode"
+                target="_blank">Photo by Laurent Lavi Lazzeresky</a>
               </div>
       </div>
       <div class="col-md-6">
